# m1ssi2013

./: .gitignore  .project  README.md
doc/: CDR.tex  DAL.tex  EtatActions.xls  GitHub.tex  RDV Client 2.doc  STB.dvi  STB.tex  TP3.doc
doc/Analyse des Risques/: AR.tex  AdR.tex
doc/Cahier de Recette/: CDR.tex  rapportTest.tex
doc/Comptes Rendu TP/: TP1.doc  TP2.doc
doc/Dossier d'architecture logicielle/: DAL Java.tex  DAL-PAM.tex  DAL-PAM.tex.  DAL.tex
doc/Glossaire/: Glossaire.tex
doc/Plan de Développement/: .PdD.tex.ini  .directory  PdD.tex  gantt.gan  gantt2-0.gan
doc/Presentation/: presentation.tex
doc/Presentation Finale/: Fiche de soutenance  presentation.tex  presentation2.tex
doc/RDV Client/: RDV Client 1.doc
doc/Rapport Final/: TeX Report.tex  bib.tex  biblio.bib  conclu.tex  intro.tex  part1.tex  part2.tex
doc/Specification Technique des Besoins/: STB.tex
res/: documentation.tex  structures.sty  univ-projet-rapport.cls  univ-projet.cls
research/: CanevasRapport.dvi  CanevasRapport.tex  EAP_OTP.tex  EtudeOTP.tex  HOTPRapport.tex  HOTPbeamer.tex  OTPRapport.tex  OTPWRapport.tex  POTPRapport.tex  TOTPRapport.tex
research/Presentation/: .directory  .presentation.tex.kate-swp  presentation.tex
src/C/: CMakeLists.txt  Doxyfile  Generation_OTP_C.tex  options.c  options.h  pam_hotp.c  pam_totp.c  pam_uotp.c
src/C/Manuel/: Manuel_d'utilisation.tex
src/C/cmake/: FindOpenSSL.cmake  FindPAM.cmake
src/C/conf/: pam_otpasswd
src/C/dieharder/: README  makefile  otp_prng.c
src/C/doc/: index
src/C/doc/html/: annotated.html  annotated.js  build_2_c_make_files_22_88_812_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  build_2_c_make_files_22_88_812_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  classes.html  conv_8h.html  conv_8h_source.html  dir_3c20749e46078323b537ef82e32dbf1e.html  dir_4576a9c3da5b43011c5f4600b2ede594.html  dir_4576a9c3da5b43011c5f4600b2ede594.js  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.js  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5b9ee56fa26613f83e4ed863d8ecb4e8.html  dir_5b9ee56fa26613f83e4ed863d8ecb4e8.js  dir_63772b626f2709090f0bdca0f40827b4.html  dir_7323666afabe19d6fb889a6e5f8d10f7.html  dir_7323666afabe19d6fb889a6e5f8d10f7.js  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.js  dir_da9d1f60b22a094d3f39025147373af5.html  dir_da9d1f60b22a094d3f39025147373af5.js  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  hotp_8c.html  hotp_8c.js  hotp_8c_source.html  hotp_8h.html  hotp_8h.js  hotp_8h_source.html  index.html  macros_8h.html  macros_8h.js  (+46 more)
src/C/doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.html  defines_0.js  defines_1.html  defines_1.js  defines_2.html  defines_2.js  defines_3.html  defines_3.js  defines_4.html  defines_4.js  defines_5.html  defines_5.js  defines_6.html  defines_6.js  defines_7.html  defines_7.js  defines_8.html  defines_8.js  defines_9.html  defines_a.html  (+39 more)
src/C/tools/: CMakeLists.txt  conv.h  otpasswd.c
src/C/utils/: CMakeLists.txt  hotp.c  hotp.h  macros.h  otp.c  otp.h  secret.c  secret.h  test-gen.c  test-usr.c  test.c  totp.c  totp.h  users.c  users.h  utils.c  utils.h
src/Java/: py_checks.xml
src/Java/AndroidToken/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-tree.html
src/Java/AndroidToken/doc/index-files/: index-1.html  index-10.html  index-11.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
src/Java/AndroidToken/doc/utils/: HOTP.html  IOTP.html  ISecret.html  OTPGenerator.html  Secret.html  TOTP.html  Utils.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
src/Java/AndroidToken/doc/utils/class-use/: HOTP.html  IOTP.html  ISecret.html  OTPGenerator.html  Secret.html  TOTP.html  Utils.html
src/Java/AndroidToken/src/tests/: HOTPTest.java  SecretTest.java  TOTPTest.java  UtilsTest.java
src/Java/AndroidToken/src/utils/: HOTP.java  IOTP.java  ISecret.java  OTPGenerator.java  Secret.java  TOTP.java  Utils.java
src/Java/OTPToken/: AndroidManifest.xml  OTPToken_distributable.apk
src/Java/OTPToken/man/: OTPToken manual.tex
src/Java/OTPToken/res/layout/: activity_login.xml  activity_set_pin.xml  activity_splash.xml  activity_token_add.xml  activity_token_list.xml  token_list_row.xml
src/Java/OTPToken/res/values/: arrays.xml  color.xml  strings.xml
src/Java/OTPToken/src/com/java/androidtoken/: AddTokenActivity.java  PINLoginActivity.java  RemoveTokenActivity.java  SetPINActivity.java  SplashActivity.java  TokenListActivity.java
src/Java/OTPToken/src/com/java/dataManager/: IOFileUtils.java  LocalData.java  OTPMethodType.java  Token.java
src/Java/OTPToken/src/tests/: IOFileUtilsTests.java  LocalDataTests.java  TokenTests.java
src/outils/: cli.py  gui.py  gui_hotp.py  gui_totp.py  hotp.py  totp.py
(+8 files in other folders)
